@@ -79,6 +79,7 @@ may contain many replay issues, but are included for testing purposes anyway.
   - Bugs: Some instruments are messed up
 - SNG: SNGPlay by BUGSY of OBSESSION
 - SNG: Faust Music Creator by FAUST
+- SNG: Adlib Tracker 1.0 by TJ
 - XAD: eXotic ADlib Format by Riven the Mage
 - XMS: XMS-Tracker by MaDoKaN/E.S.G
 
