@@ -1,6 +1,6 @@
 /*
  * Adplug - Replayer for many OPL2/OPL3 audio file formats.
- * Copyright (C) 1999, 2000, 2001 Simon Peter, <dn.tlp@gmx.net>, et al.
+ * Copyright (C) 1999 - 2002 Simon Peter <dn.tlp@gmx.net>, et al.
  * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -16,8 +16,7 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *
- * imf.h - IMF Player by Simon Peter (dn.tlp@gmx.net)
+ * imf.h - IMF Player by Simon Peter <dn.tlp@gmx.net>
  */
 
 #include "player.h"
@@ -28,10 +27,10 @@ public:
   static CPlayer *factory(Copl *newopl);
 
 	CimfPlayer(Copl *newopl)
-		: CPlayer(newopl), data(0)
+	  : CPlayer(newopl), footer(0), data(0)
 	{ };
 	~CimfPlayer()
-	{ if(data) delete [] data; };
+	{ if(data) delete [] data; if(footer) delete [] footer; };
 
 	bool load(istream &f, const char *filename);
 	bool update();
@@ -40,13 +39,16 @@ public:
 	{ return timer; };
 
 	std::string gettype()
-	{ return std::string("IMF File Format"); };
+	{ return std::string("IMF File Format"); }
+	std::string getdesc()
+	{ if(footer) return std::string(footer); else return std::string(); }
 
 protected:
 	unsigned long pos,size;
 	unsigned short del;
 	bool songend;
 	float rate,timer;
+	char *footer;
 
 	struct Sdata {
 		unsigned char reg,val;
