@@ -5,6 +5,8 @@ Changes for version 1.3:
 	- Centralized debug management.
 	- Added a whole bunch of new developer documentation.
 	- Much more flexible Protracker player.
+	- New or corrected IMF timer rates for the following games:
+		- Duke Nukem 2
 	- New format support:
 		- SNG: Adlib Tracker 1.0
 
